--- a/dhall-bot.cabal
+++ b/dhall-bot.cabal
@@ -18,5 +18,7 @@ executable dhall-bot
                      , dhall >=1.20 && <2.0
                      , mtl
                      , network-simple
+                     , prettyprinter
                      , text
+                     , transformers
   default-language:    Haskell2010
