--- a/dhall-bot.cabal
+++ b/dhall-bot.cabal
@@ -15,10 +15,11 @@ build-type:          Simple
 executable dhall-bot
   main-is:             Main.hs
   build-depends:       base  >=4.12 && <5.0
-                     , dhall >=1.20 && <2.0
+                     , dhall
                      , mtl
                      , network-simple
                      , prettyprinter
                      , text
                      , transformers
   default-language:    Haskell2010
+  ghc-options:         -Wall
